feat: switch container config to manifest widgets
