# dashboard/src/api/models/index.ts
@@ -147,9 +147,6 @@ export * from './workerPackageSseEventStatus';
 export * from './workerPackagesItem';
 export * from './workerPackagesItemStatus';
 export * from './workflow';
-export * from './workflowContainerConfig';
-export * from './workflowContainerLoopPolicy';
-export * from './workflowContainerRetryPolicy';
 export * from './workflowEdge';
 export * from './workflowList';
 export * from './workflowMetadata';
@@ -175,3 +172,4 @@ export * from './workflowRef';
 export * from './workflowSubgraph';
 export * from './workflowSubgraphMetadata';
 export * from './wsPayload';
+
